<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_lay"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#09adb9"
        android:padding="5dp" >


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:paddingBottom="25dp"
            android:paddingLeft="18dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placename"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#555"
                        android:textStyle="bold"
        android:typeface="sans"/>

                <EditText
                    android:id="@+id/editText_dialog_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NameDefault"
                    android:ems="10" 
                    android:background="@drawable/edittext_field" 
                    android:padding="1dip" 
                    android:layout_marginBottom="8dip" android:layout_marginTop="8dip"/>

                <Spinner
                    android:id="@+id/spinner_dialog_save"
                    android:layout_width="match_parent"
                    android:layout_height="48dip" android:background="@drawable/spinnet_all"/>

                <Button
                    android:id="@+id/button_dialog_save"
                    android:layout_width="wrap_content"
                    android:layout_height="48dip"
                    android:text="@string/save" android:textColor="#fff" android:typeface="sans" android:textStyle="bold" android:background="@drawable/btn_imdrunk_home" android:layout_marginTop="8dip"/>
            </LinearLayout>

          

        </RelativeLayout>

   </RelativeLayout>

</RelativeLayout>