<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#fff">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@drawable/gradient" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

			<Button
                android:id="@+id/button_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:padding="6dip"
                android:background="@drawable/map" />
            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:background="@drawable/btn_save"
                android:padding="6dip" />

            <Button
                android:id="@+id/button_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:background="@drawable/btn_go"
                android:padding="6dip" />

            <Button
                android:id="@+id/button_imdrunk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:background="@drawable/btn_imdrunk"
                android:padding="6dip" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:background="@drawable/btn_settings"
                android:padding="6dip" />
        </LinearLayout>







        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/noactive" android:layout_marginRight="8dip" android:layout_marginLeft="8dip"/>








            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:src="@drawable/active" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/noactive" android:layout_marginLeft="8dip" android:layout_marginRight="8dip"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/noactive" android:layout_marginLeft="8dip" android:layout_marginRight="8dip"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/noactive" android:layout_marginLeft="8dip" android:layout_marginRight="8dip"/>

        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="8dip" android:layout_marginLeft="16dip" android:layout_marginRight="16dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placename"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#555"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_dialog_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="@drawable/edittext_field"
                android:ems="10"
                android:hint="@string/NameDefault"
                android:padding="1dip" 
                android:inputType="textImeMultiLine|textAutoCorrect">

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinner_target"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginBottom="8dip"
                android:background="@drawable/spinnet_all" />

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="@drawable/edittext_field"
                android:ems="10"
                android:hint="@string/DescriptionDefault"
                android:padding="1dip" 
                android:inputType="textImeMultiLine|textAutoCorrect"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_mark_point"
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_marginBottom="8dip"
                    android:background="@drawable/btn_imdrunk_home"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:typeface="sans" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>